Wordpress/Terraform/wordpress-app-elb.tf
resource "aws_eip" "bastion" {
	instance = "${aws_instance.bastion.id}"
	vpc = true
}
